--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   },
   "homepage": "https://github.com/von-berlichingen/hearthstone#readme",
   "devDependencies": {
-    "ava": "^0.21.0",
-    "babel-eslint": "^7.2.3",
-    "nyc": "^11.1.0",
-    "sinon": "^3.2.0",
-    "snazzy": "^7.0.0",
-    "standard": "^10.0.3"
+    "ava": "0.21.0",
+    "babel-eslint": "7.2.3",
+    "nyc": "11.1.0",
+    "sinon": "3.2.0",
+    "snazzy": "7.0.0",
+    "standard": "10.0.3"
   },
   "dependencies": {}
 }
